--- a/frontend/src/Components/Pagination/style.css
+++ b/frontend/src/Components/Pagination/style.css
@@ -1,9 +1,14 @@
 .product-page-controller{
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 350px;
 }
 
 .page-link:hover{
     cursor: pointer;
+}
+
+.pagination{
+    -webkit-box-shadow: 5px 5px 15px 4px rgba(0,0,0,0.2); 
+    box-shadow: 5px 5px 15px 4px rgba(0,0,0,0.2);
 }
